Docs: enforce Java 26 and Spring Boot 4 feature usage in backend agent instructions
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>